# nade

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README-zh_cn.md  README.md
nade/: Cargo.toml  README.md
nade-macro/: Cargo.toml
nade-macro/src/: argument.rs  helper.rs  lib.rs  maybe_start_with_dollar.rs  maybe_starts_with_dollar.rs  nade.rs  nade_helper.rs  parameter.rs  parameter_doc.rs  path_attribute.rs
nade/src/: lib.rs
nade/tests/: basic_test.rs  compile_fail.rs  manual_test.rs  pass.rs  path_test.rs
nade/tests/compile_fail/: 01_not_find_function_error.rs  01_not_find_function_error.stderr  02_default_argument_unhygienic_error.rs  02_default_argument_unhygienic_error.stderr
nade/tests/pass/: 01_find_function.rs  02_default_argument_hygienic.rs
src/: lib.rs
tests/: basic_test.rs  manual_test.rs  path_test.rs
tests/compile_fail/: 01_not_find_function_error.rs  01_not_find_function_error.stderr  02_default_argument_unhygienic_error.rs  02_default_argument_unhygienic_error.stderr
tests/pass/: 01_find_function.rs  02_default_argument_hygienic.rs
