[workspace]
members = [".", "nade-macro"]

[workspace.package]
version = "0.2.1"
edition = "2021"
authors = ["zihan <ZihanType@proton.me>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/ZihanType/nade"
repository = "https://github.com/ZihanType/nade"
include = ["src/**/*", "Cargo.toml"]

[workspace.dependencies]
nade-macro = { version = "0.2.1", path = "./nade-macro" }

prettyplease = { version = "0.2", default-features = false }
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false }
trybuild = { version = "1", default-features = false }
macro-v = { version = "0.1.3", default-features = false }

[package]
name = "nade"
description = "Adding named and default arguments to Rust functions"
keywords = ["macro", "named", "default"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro-v = { workspace = true }
nade-macro = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
