[package]
name = "nade"
description = "Adding named and default arguments to Rust functions"
keywords = ["macro", "named arguments", "default arguments"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro-v = { workspace = true }
nade-macro = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
